--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ header {
 /* Home Page */
 
 #homepage {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
@@ -128,7 +128,7 @@ li:hover {
 /* Menu */
 
 #menu {
-    display: none;
+    display: block;
     margin-inline: auto;
     width: min(90%, 80rem);
     background-color: rgba(0, 0, 0, 0.623);
