--- a/src/style.css
+++ b/src/style.css
@@ -154,6 +154,7 @@ li:hover {
     justify-content: space-around;
     align-items: center;
     color: white;
+    height: 55vh;
 }
 
 .info h1, p {
@@ -179,7 +180,7 @@ form {
     justify-content: space-around;
     align-items: center;
     color: white;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .reverse h1 {
